<resources>
    <string name="app_name">Todolist</string>
    <string name="home_page_name">Home</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed_username">"User does not exist"</string>
    <string name="login_failed_password">"Password is invalid"</string>
    <string name="logo">LOGO</string>\
    <!-- Strings related to TodoList -->
    <string name="default_day">Thursday, 23th</string>
    <string name="default_month">July</string>
    <string name="default_task_count">0个任务</string>
    <string name="default_title">TODO默认标题</string>
    <string name="default_time">7:00 am</string>
    <string name="date">日期</string>
    <string name="notice">提醒</string>
    <string name="default_content">默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容
    ，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容
    ，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容，默认内容
    </string>
</resources>